--- a/kkinterview/kkinterview/CusCell/inforCell.xib
+++ b/kkinterview/kkinterview/CusCell/inforCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,14 +18,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgFriendsFemaleDefault" translatesAutoresizingMaskIntoConstraints="NO" id="38L-fI-6vf">
-                        <rect key="frame" x="30" y="10" width="40" height="40"/>
+                        <rect key="frame" x="60" y="10" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="G4W-KS-GUh"/>
                             <constraint firstAttribute="width" constant="40" id="eku-Oq-8cG"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="黃靖僑" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLN-mu-XFx" userLabel="nameLabel">
-                        <rect key="frame" x="85" y="19" width="48" height="22"/>
+                        <rect key="frame" x="115" y="19" width="48" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="0Eh-gk-Zzw"/>
                             <constraint firstAttribute="height" constant="22" id="iTp-Ue-2zf"/>
@@ -34,7 +35,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFw-bK-lGR">
-                        <rect key="frame" x="260" y="18" width="60" height="24"/>
+                        <rect key="frame" x="230" y="18" width="60" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="1Ph-Qh-NTM"/>
                             <constraint firstAttribute="width" constant="60" id="Rp9-md-Hpc"/>
@@ -42,7 +43,7 @@
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OfJ-am-kx3">
-                        <rect key="frame" x="203" y="18" width="47" height="24"/>
+                        <rect key="frame" x="173" y="18" width="47" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="47" id="bci-IG-2Mo"/>
                             <constraint firstAttribute="height" constant="24" id="gm7-wH-owu"/>
@@ -50,16 +51,18 @@
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="crA-ca-tdC" userLabel="infoButton">
-                        <rect key="frame" x="300" y="18" width="20" height="24"/>
+                        <rect key="frame" x="270" y="18" width="20" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="Gkm-gp-DiK"/>
                             <constraint firstAttribute="width" constant="20" id="wiJ-Kv-JAZ"/>
                         </constraints>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Button" image="icFriendsMore"/>
+                        <state key="normal" title="Button" image="icFriendsMore">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JSF-Aq-hgV" userLabel="轉帳v2">
-                        <rect key="frame" x="228" y="18" width="47" height="24"/>
+                        <rect key="frame" x="198" y="18" width="47" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="0AS-1z-2N7"/>
                             <constraint firstAttribute="width" constant="47" id="khd-mT-ajp"/>
@@ -68,33 +71,44 @@
                         <state key="normal" title="轉帳"/>
                     </button>
                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icFriendsStar" translatesAutoresizingMaskIntoConstraints="NO" id="jyt-fp-JUG">
-                        <rect key="frame" x="10" y="23" width="14" height="14"/>
+                        <rect key="frame" x="40" y="23" width="14" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="IeH-dQ-ixc"/>
                             <constraint firstAttribute="width" constant="14" id="K1Q-93-uSZ"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QIV-jt-0Fu" userLabel="lineView">
+                        <rect key="frame" x="115" y="56" width="205" height="1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Cxf-Pw-ABS"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="vLN-mu-XFx" firstAttribute="leading" secondItem="QIV-jt-0Fu" secondAttribute="leading" id="9zi-nJ-CMd"/>
                     <constraint firstItem="38L-fI-6vf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="D9s-JT-fx8"/>
                     <constraint firstItem="WFw-bK-lGR" firstAttribute="leading" secondItem="OfJ-am-kx3" secondAttribute="trailing" constant="10" id="GSl-yD-1YR"/>
                     <constraint firstItem="OfJ-am-kx3" firstAttribute="centerY" secondItem="vLN-mu-XFx" secondAttribute="centerY" id="KJ6-6p-kcK"/>
                     <constraint firstItem="JSF-Aq-hgV" firstAttribute="centerY" secondItem="vLN-mu-XFx" secondAttribute="centerY" id="KSq-RS-dhk"/>
+                    <constraint firstAttribute="trailing" secondItem="QIV-jt-0Fu" secondAttribute="trailing" id="LO9-EX-GDC"/>
                     <constraint firstItem="WFw-bK-lGR" firstAttribute="centerY" secondItem="OfJ-am-kx3" secondAttribute="centerY" id="Mj3-cf-1bm"/>
                     <constraint firstItem="38L-fI-6vf" firstAttribute="leading" secondItem="jyt-fp-JUG" secondAttribute="trailing" constant="6" id="T57-xg-095"/>
-                    <constraint firstAttribute="trailing" secondItem="crA-ca-tdC" secondAttribute="trailing" id="XN3-tf-kUV"/>
+                    <constraint firstAttribute="trailing" secondItem="crA-ca-tdC" secondAttribute="trailing" constant="30" id="XN3-tf-kUV"/>
                     <constraint firstItem="crA-ca-tdC" firstAttribute="centerY" secondItem="vLN-mu-XFx" secondAttribute="centerY" id="YH1-lT-Dfc"/>
                     <constraint firstItem="vLN-mu-XFx" firstAttribute="leading" secondItem="38L-fI-6vf" secondAttribute="trailing" constant="15" id="aTC-TO-Ry4"/>
                     <constraint firstItem="crA-ca-tdC" firstAttribute="leading" secondItem="JSF-Aq-hgV" secondAttribute="trailing" constant="25" id="b1a-Te-fWc"/>
-                    <constraint firstAttribute="trailing" secondItem="WFw-bK-lGR" secondAttribute="trailing" id="bF6-im-MIj"/>
+                    <constraint firstAttribute="trailing" secondItem="WFw-bK-lGR" secondAttribute="trailing" constant="30" id="bF6-im-MIj"/>
+                    <constraint firstAttribute="bottom" secondItem="QIV-jt-0Fu" secondAttribute="bottom" constant="3" id="f2A-1E-zqa"/>
                     <constraint firstItem="vLN-mu-XFx" firstAttribute="centerY" secondItem="38L-fI-6vf" secondAttribute="centerY" id="o8t-Kr-HYy"/>
-                    <constraint firstItem="38L-fI-6vf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="vli-TA-Eot"/>
+                    <constraint firstItem="38L-fI-6vf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="vli-TA-Eot"/>
                     <constraint firstItem="38L-fI-6vf" firstAttribute="centerY" secondItem="jyt-fp-JUG" secondAttribute="centerY" id="xiT-k4-FB1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="inviteButton" destination="WFw-bK-lGR" id="kWg-cZ-hTc"/>
+                <outlet property="lineView" destination="QIV-jt-0Fu" id="tDL-0z-lgM"/>
                 <outlet property="moreInfoButton" destination="crA-ca-tdC" id="7JC-0I-RLf"/>
                 <outlet property="nameLabel" destination="vLN-mu-XFx" id="vzJ-g1-alV"/>
                 <outlet property="pinImageView" destination="jyt-fp-JUG" id="Tbr-WM-1Uw"/>
@@ -108,5 +122,8 @@
         <image name="icFriendsMore" width="18" height="4"/>
         <image name="icFriendsStar" width="14" height="14"/>
         <image name="imgFriendsFemaleDefault" width="52" height="54"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
